--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
   \section{about}
     31 rue Smith
     69002 Lyon
-    France
+    Francess
     ~
     \href{mailto:adrien@friggeri.net}{adrien@friggeri.net}
     \href{http://friggeri.net}{http://friggeri.net}
